--- a/templates/host.html
+++ b/templates/host.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block host %}
-<form>
+<form method="post" action="/add">{% csrf_token %}
    <fieldset class="form-group">
-      <label for="exampleInputText">Host Name</label>
-      <input type="text" class="form-control" id="HostName" placeholder="Enter Hostname">
+      <label for="hostname">Host Name</label>
+      <input type="text" class="form-control" id="HostName" placeholder="Enter Host Name">
    </fieldset>
    <fieldset class="form-group">
-      <label for="exampleInputText">IP Address</label>
-      <input type="text" class="form-control" id="IPAddress" placeholder="IP Address">
+      <label for="ipaddress">IP Address</label>
+      <input type="text" class="form-control" id="IPAddress" placeholder="Enter IP Address">
    </fieldset>
    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
