--- a/templates/host.html
+++ b/templates/host.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block host %}
-<form method="post" action="/add">{% csrf_token %}
+<form method="POST" action="/add">{% csrf_token %}
    <fieldset class="form-group">
       <label for="hostname">Host Name</label>
-      <input type="text" class="form-control" id="HostName" placeholder="Enter Host Name">
+      <input type="text" class="form-control" name="hostname" placeholder="Enter Host Name" value="{{form.hostname}}">
    </fieldset>
    <fieldset class="form-group">
       <label for="ipaddress">IP Address</label>
-      <input type="text" class="form-control" id="IPAddress" placeholder="Enter IP Address">
+      <input type="text" class="form-control" name="ipaddress" placeholder="Enter IP Address" value="{{form.ipaddress}}">
    </fieldset>
-   <button type="submit" class="btn btn-primary">Submit</button>
+   <button type="submit" class="btn btn-primary" >Submit</button>
 </form>
 {% endblock %}
