--- a/templates/details.html
+++ b/templates/details.html
@@ -4,15 +4,15 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Content</th>
+      <th>Programm</th>
+      <th>Detail</th>
     </tr>
   </thead>
     <tbody>
 {%for details in details_list%}
   <tr>
-    <td>{{details.detail_date_audit}}</td>
-    <td>{{details.detail_content}}</td>
+    <td>{{details.programm}}</td>
+    <td>{{details.url}}</td>
   </tr>
 {%endfor%}
   </tbody>
