add vulners info

--- a/templates/host.html
+++ b/templates/host.html
@@ -19,8 +19,8 @@
    <fieldset class="form-group">
     <label for="exampleSelect1">Status</label>
     <select class="form-control" name="hoststatus">
-      <option>enabled</option>
-      <option>desabled</option>
+        <option>Internal</option>
+        <option>External</option>
     </select>
    </fieldset>
    <button type="submit" class="btn btn-primary" >Submit</button>
