--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
         {% block index %}{% endblock %}
         {% block detail %}{% endblock %}
         {% block host %}{% endblock %}
+        {% block score %}{% endblock %}
       </div>
 
     </div><!-- /.container -->
