sort add all pages

--- a/templates/score.html
+++ b/templates/score.html
@@ -14,7 +14,7 @@
     {%for details in result_vul%}
     {%for str in details%}
     <tr>
-        <td>{{str.description}}</td>
+        <td width="77%">{{str.description}}</td>
         <td width="8%">{{str.score}}</td>
         <td width="15%">{{str.cve}}</td>
     </tr>
