--- a/templates/details.html
+++ b/templates/details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block detail %}
 {%if details_list%}
-<table class="table table-hover">
+<table class="table table-hover sortable">
   <thead>
     <tr>
       <th>Programm</th>
@@ -11,7 +11,7 @@
     <tbody>
 {%for details in details_list%}
   <tr>
-    <td><a href="{{details.url}}" target="_blank">{{details.programm}}</a></td>
+    <td width="20%"><a href="{{details.url}}" target="_blank">{{details.programm}}</a></td>
     <td>{%if details.cve_list%}
       {{details.cve_list}}
       {% else %}
