--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 {% block index %}
 <div class="starter-template">
   {% if host_list %}
-  <table class="table table-hover">
+  <table class="table table-hover sortable">
     <thead>
     <tr>
       <th>Host name</th>
       <th>IP address</th>
       <th>Type</th>
       <th>Status</th>
-      <th>Action</th>
+      <th data-defaultsort='disabled'>Action</th>
     </tr>
     </thead>
       <tbody>
