fix bug in score page

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="../">Home</a></li>
             <li class="active"><a href="../create_host">Create host</a></li>
+            <li class="active"><a href="../dashboard">Dashboard</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,6 +60,7 @@
         {% block detail %}{% endblock %}
         {% block host %}{% endblock %}
         {% block score %}{% endblock %}
+        {% block dashboard %}{% endblock %}
       </div>
 
     </div><!-- /.container -->
