--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <tbody>
     {% for host in host_list %}
       <tr>
-        <td><a href="/host/{{host.pk}}">{{host.host_name}}</a></td>
+        <td><a href="/score/{{host.pk}}">{{host.host_name}}</a></td>
         <td><a href="/score/{{host.pk}}">{{host.host_address}}</a></td>
         <td>{{host.host_type}}</td>
         <td>{{host.host_status}}</td>
