--- a/templates/score.html
+++ b/templates/score.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block score %}
+
+{%for host in host_info%}
+<h1>{{host.host_name}}</h1>
+{%endfor%}
+
 {%if result_vul%}
 
 <table class="table table-hover sortable">
