--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,10 @@
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
     <title>Audit</title>
-
-    <!-- Bootstrap core CSS -->
     {% load staticfiles %}
+    <link href="{% static 'favicon.ico' %}" rel="shortcut icon">
+    <!-- Bootstrap core CSS -->
+
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
