--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
     <link href="{% static 'favicon.ico' %}" rel="shortcut icon">
     <!-- Bootstrap core CSS -->
 
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static "css/starter-template.css" %}" rel="stylesheet">
+    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
 
     <!-- Sort Table-->
-    <link href="{% static "css/bootstrap-sortable.css" %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap-sortable.css' %}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -71,7 +71,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/bootstrap-sortable.js" %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-sortable.js' %}"></script>
   </body>
 </html>
