add crypt rsa key

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
         {% block host %}{% endblock %}
         {% block score %}{% endblock %}
         {% block dashboard %}{% endblock %}
+        {% block key %}{% endblock %}
       </div>
 
     </div><!-- /.container -->
