--- a/templates/key.html
+++ b/templates/key.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block key %}
+<p><b>No password for RSA key</b></p>
+{% endblock %}
